<resources>
    <string name="app_name">WiQuizPedia</string>
    <string name="tv_title_message">Albert Einstein</string>
    <string name="tv_title_hint">title to search for</string>
    <string name="button">Button</string>
    <string name="textview_message">load question ...</string>
    <string name="et_answer_message">direct answer ...</string>
    <string name="cb_answer_1_message">answer 1</string>
    <string name="cb_answer_2_message">answer 2</string>
    <string name="cb_answer_3_message">answer 3</string>
    <string name="pref_auto_next">open next query after answer</string>
    <string name="pref_allow_free_input">only multiple choice</string>
    <string name="pref_only_extract">ask only summary of page</string>
    <string name="pref_cat_content_title">query content settings</string>
    <string name="pref_cat_gui_title">gui behaviour</string>
    <string name="opt_menu_data_refresh">update app</string>
    <string name="opt_menu_settings">settings ...</string>
    <string name="pref_token_across_pages">use answers from other pages</string>
    <string name="pref_cat_generate_query">generate query</string>
    <string name="pref_qry_fill_other_type">same type values blank</string>
    <string name="pref_qry_fill_all">leave all values blank</string>
    <string name="pref_qry_max_count_p_sentence">max queries from a sentence</string>
    <string name="pref_token_noun_marker">token per noun marker</string>
    <string name="hlp_tv">Help: \n\t - einfach Wunsch-Titel (Wikipedia Seiten-Name) eingeben
        \n ... und los geht es ...
\n folgende Funktionen werden derzeit unterstützt:
\n - swipe oben nach unten - zufälligen Artikel laden
\n -  long press - zeige 3 zufällige Artikel ...
\n - swipe nach rechts/links - nächste / vorherige frage
\n und ...
\n - swipe nach oben - nächsten Satz mit in Query aufnehmen (falls Satz-Trennnung nicht richtig erkannt wurde. ..)
 </string>
    <string name="opt_menu_show_help">show help</string>
    <string name="pref_qry_almost_correct">exact answer only</string>
    <string name="pref_err_upload_err">upload anonym error message</string>
    <string name="opt_menu_err_show">show last error</string>
    <string name="opt_menu_send_comment">comment</string>
    <string name="coment_page_title">Comment</string>
    <string name="et_comment_page_text" />
    <string name="tv_comment_rcv">recent comments ...</string>
    <string name="opt_menu_version">Version: ...</string>
    <string name="pref_sys_check_upd">check for updates</string>
    <string name="pref_sys_title">system settings</string>
</resources>
